--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -308,7 +308,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                    
                     
                 
-          </div>
+<!--          </div>
            <div class="col-md-12">
             <div class="row" align="center">
                 <button type="button" class="btn btn-default"><a href="#" th:href="@{/empleado/}">Regresar</a></button>
@@ -316,7 +316,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
     </div>
-                </form>
+                </form>-->
       </div>
   </div><!-- tab -->
 
